--- a/front/src/app/signup/signup.component.html
+++ b/front/src/app/signup/signup.component.html
@@ -25,76 +25,101 @@
                                 <div class="col-md-12 col-12 pt-2">
                                     <h2 class="pt-1 text-center text-md-left text-primary">Inscription</h2>
                                 </div>
-                                <div *ngIf="displaySignupError" class="col-md-12 col-12 pr-md-4">
+                                <div *ngIf="isInError" class="col-md-12 col-12 pr-md-4">
                                     <div class="alert alert-danger">
-                                        {{errorMessage}}
+                                        {{errorMsg}}
                                     </div>
                                 </div>
-                                <form (ngSubmit)="signup()" #authForm="ngForm">
+                                <form (ngSubmit)="signup()" [formGroup]="signupForm">
                                     <div class="form-group"
-                                         [class.has-danger]="lastName.dirty && lastName.hasError('required')">
+                                         [class.has-danger]="lastNameCtrl.dirty && lastNameCtrl.hasError('required')">
                                         <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-user prefix my-auto pr-0"></i>
                                         <md-input-container class="col-7 col-md-8" color="primary">
-                                            <input id="inputFirstname" mdInput
+                                            <input id="inputLastname" mdInput
                                                    type="text"
                                                    placeholder="Saisissez votre nom"
-                                                   [(ngModel)]="authenticationProfile.firstName"
-                                                   name="authenticationProfile.firstName" required #lastName="ngModel">
-                                            <md-hint *ngIf="lastName.dirty && lastName.hasError('required')"
+                                                   formControlName="lastName"
+                                                   required>
+                                            <md-hint *ngIf="lastNameCtrl.dirty && lastNameCtrl.hasError('required')"
                                                      class="form-control-feedback">Votre nom est obligatoire.
                                             </md-hint>
                                         </md-input-container>
                                     </div>
 
                                     <div class="form-group"
-                                         [class.has-danger]="firstName.dirty && firstName.hasError('required')">
+                                         [class.has-danger]="firstNameCtrl.dirty && firstNameCtrl.hasError('required')">
                                         <md-input-container class="col-7 col-md-8 offset-md-2 offset-3" color="primary">
-                                            <input id="inputLastname" mdInput
+                                            <input id="inputFirstName" mdInput
                                                    type="text"
                                                    placeholder="Saisissez votre prénom"
-                                                   [(ngModel)]="authenticationProfile.lastName"
-                                                   name="authenticationProfile.lastName" required #firstName="ngModel">
-                                            <md-hint *ngIf="firstName.dirty && firstName.hasError('required')"
+                                                   formControlName="firstName"
+                                                   required>
+                                            <md-hint *ngIf="firstNameCtrl.dirty && firstNameCtrl.hasError('required')"
                                                      class="form-control-feedback">Votre prénom est obligatoire.
                                             </md-hint>
                                         </md-input-container>
                                     </div>
 
                                     <div class="form-group"
-                                         [class.has-danger]="login.dirty && login.hasError('required')">
+                                         [class.has-danger]="emailCtrl.dirty && emailCtrl.hasError('required')">
                                         <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-envelope prefix my-auto pr-0"></i>
                                         <md-input-container class="col-7 col-md-8" color="primary">
                                             <input id="inputEmail" mdInput
                                                    type="email"
                                                    placeholder="Saisissez votre email"
-                                                   [(ngModel)]="authenticationProfile.login"
-                                                   name="authenticationProfile.login" required #login="ngModel">
-                                            <md-hint *ngIf="login.dirty && login.hasError('required')"
-                                                     class="form-control-feedback">Votre login est obligatoire.
-                                            </md-hint>
-                                        </md-input-container>
-                                    </div>
-                                    <div class="form-group"
-                                         [class.has-danger]="password.dirty && password.hasError('required')">
-                                        <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-lock prefix my-auto pr-0"></i>
-                                        <md-input-container class="col-7 col-md-8">
-                                            <input id="inputPassword" type="password" mdInput
-                                                   placeholder="Saisissez votre mot de passe"
-                                                   [(ngModel)]="authenticationProfile.password"
-                                                   name="authenticationProfile.password" required
-                                                   #password="ngModel">
-                                            <md-hint *ngIf="password.dirty && password.hasError('required')"
-                                                     class="form-control-feedback">Votre mot de passe est
-                                                obligatoire.
+                                                   formControlName="email"
+                                                   required>
+                                            <md-hint *ngIf="emailCtrl.dirty && emailCtrl.hasError('required')"
+                                                     class="form-control-feedback">Votre email est obligatoire.
                                             </md-hint>
                                         </md-input-container>
                                     </div>
 
+                                    <div formGroupName="passwordForm">
+                                        <div class="form-group">
+                                            <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-lock prefix my-auto pr-0"></i>
+                                            <md-input-container class="col-7 col-md-8">
+                                                <input id="inputPassword" type="password" mdInput
+                                                       placeholder="Saisissez votre mot de passe"
+                                                       formControlName="password"
+                                                       required>
+                                                <md-hint *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')"
+                                                         class="form-control-feedback">Votre mot de passe est
+                                                    obligatoire.
+                                                </md-hint>
+                                                <md-hint
+                                                        *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('minlength')"
+                                                        class="form-control-feedback">Le mot de passe doit faire au
+                                                    minimum {{passwordCtrl.getError('minlength')['requiredLength']}}
+                                                    caractères.
+                                                </md-hint>
+                                            </md-input-container>
+                                        </div>
+                                        <div class="form-group">
+                                            <i class="col-md-1 offset-1 col-2 text-center fa fa-2x fa-lock prefix my-auto pr-0"></i>
+                                            <md-input-container class="col-7 col-md-8"
+                                                                [class.ng-invalid]="passwordForm.dirty && passwordForm.hasError('matchingError')">
+                                                <input id="inputConfirmPassword" type="password" mdInput
+                                                       placeholder="Veuillez confirmer votre mot de passe"
+                                                       formControlName="confirmPassword" required>
+                                                <md-hint
+                                                        *ngIf="confirmPasswordCtrl.dirty && confirmPasswordCtrl.hasError('required')"
+                                                        class="form-control-feedback">La confirmation du mot de passe
+                                                    est obligatoire.
+                                                </md-hint>
+                                                <md-hint
+                                                        *ngIf="confirmPasswordCtrl.dirty && passwordForm.dirty && passwordForm.hasError('matchingError') && !confirmPasswordCtrl.hasError('required')"
+                                                        class="form-control-feedback">
+                                                    <strong>Oups !</strong> Vos mots de passe ne correspondent pas.
+                                                </md-hint>
+                                            </md-input-container>
+                                        </div>
+                                    </div>
                                     <div class="form-group mb-3">
                                         <div class="offset-md-7 col-md-5 col-12 bottom-md-right">
                                             <button [class.disabled]="subscribing" type="button"
                                                     class="btn btn-lg btn-primary text-white w-100" type="submit"
-                                                    [disabled]="!authForm.valid">
+                                                    [disabled]="signupForm.invalid">
                                                 S'inscrire
                                             </button>
                                         </div>
