Fix bug and implementation of ngxerrors for signup

--- a/front/src/app/signin/signin.component.html
+++ b/front/src/app/signin/signin.component.html
@@ -55,7 +55,7 @@
                                                      class="form-control-feedback">
                                                 Votre mot de passe est obligatoire.
                                             </md-hint>
-                                            <md-hint ngxError="minlength" [when]="['dirty', 'touched']" align="bottom"
+                                            <md-hint ngxError="minlength" [when]="['dirty']" align="bottom"
                                                      class="form-control-feedback">
                                                 Le mot de passe doit faire au minimum 6 caractères.
                                             </md-hint>
