--- a/front/src/app/program/program.component.html
+++ b/front/src/app/program/program.component.html
@@ -2,17 +2,17 @@
 <section>
     <div class="row mb-3">
         <div class="col-md-4">
-            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-calendar-outline" label="Généré le"
+            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-calendar-outline" label="Généré le" icoBackgroundColor="orange"
                                             value="{{createdAt}}">
             </pulpe-simple-counter-with-icon>
         </div>
         <div class="col-md-4">
-            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-refresh-empty" label="Nombre de fois terminé"
+            <pulpe-simple-counter-with-icon icoClass="ion ion-ios-refresh-empty" label="Nombre de fois terminé" icoBackgroundColor="green"
                                             value="33x">
             </pulpe-simple-counter-with-icon>
         </div>
         <div class="col-md-4">
-            <pulpe-simple-counter-with-icon icoClass="ion-ios-timer-outline" label="Durée"
+            <pulpe-simple-counter-with-icon icoClass="ion-ios-timer-outline" label="Durée" icoBackgroundColor="blue"
                                             value="{{totalTimeOfProgram}}">
             </pulpe-simple-counter-with-icon>
         </div>
