--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,26 +1,33 @@
+@import "../assets/style/colors";
+
 .sidebar-background {
   width: 310px;
   background-image: url("../assets/img/sidebar.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  height: 100%; }
+  height: 100%;
+
+}
 
 .sidebar-container {
-  background: #FF5722;
+  background: $primary-color;
   opacity: .8;
-  height: 100%; }
+  height: 100%;
+}
 
 .mynav {
   padding-left: 0;
   margin-bottom: 0;
-  list-style: none; }
+  list-style: none;
+}
 
 .sidebar .nav li > a {
   margin: 10px 15px 0;
   border-radius: 3px;
   color: #3C4858;
   padding-left: 10px;
-  padding-right: 10px; }
+  padding-right: 10px;
+}
 
 .mynav > li a {
   margin: 10px 15px 0;
@@ -30,22 +37,28 @@
   padding: 24px 9px;
   color: white;
   font-size: 1.1rem;
-  font-weight: 200; }
+  font-weight: 200;
+}
 
 .sidebar-link {
-  cursor: pointer; }
-  .sidebar-link:hover {
-    color: #FF5722;
-    background-color: white; }
-    .sidebar-link:hover a span {
-      color: #FF5722; }
+  cursor: pointer;
+  &:hover {
+    color: $primary-color;
+    background-color: white;
+    a {
+      span {
+        color: $primary-color;
+      }
+    }
+  }
+}
 
 .sidebar-link:hover > a > .material-icons {
-  color: #FF5722;
-  background-color: white; }
+  color: $primary-color;
+  background-color: white;
+}
 
 .separator {
   background-color: white;
-  opacity: 0.7; }
-
-/*# sourceMappingURL=app.component.css.map */
+  opacity: 0.7;
+}
