- Comment footer component

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -76,7 +76,7 @@
         <pulpe-navbar></pulpe-navbar>
         <router-outlet></router-outlet>
         <button (click)="_toggleSidebar()">Open sidebar</button>
-        <pulpe-footer></pulpe-footer>
+        <!--<pulpe-footer></pulpe-footer>-->
     </div>
 </ng-sidebar-container>
 
