--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,8 +1,7 @@
-<div class="row mb-6">
-  <div class="col text-center">
-    <h1 class="display-4 text-primary">Prochaine séance Samedi à 14H00</h1>
-  </div>
-</div>
+<pulpe-page-title
+        [title]="'Accueil'">
+</pulpe-page-title>
+
 
 <div class="row card-cascade-parent">
   <div class="col-md-12">
