--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -7,6 +7,6 @@
         <pulpe-profile-photo></pulpe-profile-photo>
     </div>
     <div class="col-md-8 pt-md-0 pt-5">
-        <pulpe-profile-infos></pulpe-profile-infos>
+        <pulpe-profile-infos [member]="member"></pulpe-profile-infos>
     </div>
 </div>
