--- a/front/src/app/profile/profile-infos/profile-infos.component.html
+++ b/front/src/app/profile/profile-infos/profile-infos.component.html
@@ -20,11 +20,11 @@
             <hr class="w-100 mt-0">
             <div class="col-md-3">
                 <label class="text-uppercase text-primary">Nom</label><br>
-                <label>Manivet</label>
+                <label>{{member.lastName}}</label>
             </div>
             <div class="col-md-3">
                 <label class="text-uppercase text-primary">Prénom</label><br>
-                <label>Barbara</label>
+                <label>{{member.firstName}}</label>
             </div>
             <div class="col-md-3">
                 <label class="text-uppercase text-primary">Taille</label><br>
