--- a/front/src/app/program/program.component.html
+++ b/front/src/app/program/program.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col-md-4">
             <pulpe-simple-counter-with-icon icoClass="ion ion-ios-refresh-empty"
-                                            label="Nombre de fois terminé"
+                                            label="Nb. de fois terminé"
                                             icoBackgroundColor="green"
                                             value="33x">
             </pulpe-simple-counter-with-icon>
