--- a/front/src/app/profile/profile.component.html
+++ b/front/src/app/profile/profile.component.html
@@ -1,12 +1,14 @@
-<pulpe-page-title
-        [title]="'Votre profil'">
-</pulpe-page-title>
+<div [@fadeIn]>
+    <pulpe-page-title
+            [title]="'Votre profil'">
+    </pulpe-page-title>
 
-<div class="row card-cascade-parent">
-    <div class="col-md-4">
-        <pulpe-profile-photo></pulpe-profile-photo>
-    </div>
-    <div class="col-md-8 pt-md-0 pt-5">
-        <pulpe-profile-infos [member]="member"></pulpe-profile-infos>
+    <div class="row card-cascade-parent">
+        <div class="col-md-8 pt-md-0 pt-5">
+            <pulpe-profile-infos [member]="member"></pulpe-profile-infos>
+        </div>
+        <div class="col-md-4">
+            <pulpe-profile-photo></pulpe-profile-photo>
+        </div>
     </div>
 </div>
