--- a/front/src/app/evolution/evolution.component.html
+++ b/front/src/app/evolution/evolution.component.html
@@ -6,7 +6,11 @@
     <div class="col-md-12">
         <md-card class="pt-0 white">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
+                    <pulpe-measurements-list [measurements]="member.measurements">
+                    </pulpe-measurements-list>
+                </div>
+                <div class="col-md-8">
                     <pulpe-efficient-line-graph>
                     </pulpe-efficient-line-graph>
                 </div>
