--- a/front/src/assets/style/_colors.scss
+++ b/front/src/assets/style/_colors.scss
@@ -1,6 +1,7 @@
 $primary-color: #FF5722;
 $accent-color: #448AFF;
 $warn-color: #FFAB00;
+$white-color: #000000;
 
 $dark-primary-color: #E64A19;
 $light-primary-color: #FFCCBC;
