--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,51 +1,9 @@
-.sidebar-background {
-  width: 310px;
-  background-image: url("../assets/img/sidebar.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100%; }
+body {
+  font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px; }
 
-.sidebar-container {
-  background: #FF5722;
-  opacity: .8;
-  height: 100%; }
-
-.mynav {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none; }
-
-.sidebar .nav li > a {
-  margin: 10px 15px 0;
-  border-radius: 3px;
-  color: #3C4858;
-  padding-left: 10px;
-  padding-right: 10px; }
-
-.mynav > li a {
-  margin: 10px 15px 0;
-  border-radius: 3px;
-  position: relative;
-  display: block;
-  padding: 24px 9px;
-  color: white;
-  font-size: 1.1rem;
-  font-weight: 200; }
-
-.sidebar-link {
-  cursor: pointer; }
-  .sidebar-link:hover {
-    color: #FF5722;
-    background-color: white; }
-    .sidebar-link:hover a span {
-      color: #FF5722; }
-
-.sidebar-link:hover > a > .material-icons {
-  color: #FF5722;
-  background-color: white; }
-
-.separator {
-  background-color: white;
-  opacity: 0.7; }
+.navbar {
+  flex-direction: row;
+  -webkit-flex-direction: row; }
 
 /*# sourceMappingURL=app.component.css.map */
